# quix-n-kafka

./: .env.example  .gitignore  Makefile  README.md  docker-compose.develop.yml  docker-compose.local.yml
consumer/: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  main.py  pyproject.toml
consumer/schema/: __init__.py
consumer/schema/cli/: config.py  entities.py  interfaces.py
producer/: .pre-commit-config.yaml  Dockerfile.local  entrypoint.local.sh  main.py  pyproject.toml  srcli.py
producer/schema/: __init__.py  utils.py
producer/schema/cli/: app.py  di.py
producer/schema/ping/: v1.json  v1.py
producer/schema/pong/: v1.json  v1.py
